# jlib

./: .gitignore  AUTHORS  ChangeLog  DOCKER  DOCKER.md  Dockerfile.gcc10  Dockerfile.gcc49  Dockerfile.gcc5  Dockerfile.gcc61  Dockerfile.gcc75  Makefile.am  NEWS  README  TODO.md  config.h.in  configure.ac
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  jlib.default.ex  jlib.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
jlib/: Makefile.am  jlib-1.2.pc.in
jlib/ai/: Makefile.am  action.cc  action.hh  agent.cc  agent.hh  environment.cc  environment.hh  neural.hh  percept.cc  percept.hh  vacuum.cc  vacuum.hh
jlib/apps/: Hyper.hh  Makefile.am  jcrypt.cc  jcublas.cc  jcurve.cc  jgltorus.cc  jgluthyper.cc  jglxbox.cc  jglxhyper.cc  jhardhyper.cc  jhyper.cc  jhypermusic.cc  jjoy2xev.cc  jjoystick.cc  jlib-mail.cc  jm3u.cc  jmelody.cc  jneural-alpha.cc  jneural-search.cc  jneural-zero.cc  jneural.cc  jnote.cc  jpoisoned.cc  ksp-axes-ps3.map  ksp-buttons-ps3.map  tor-axes-ps3.map  tor-buttons-ps3.map  wow-axes-ps3.map  wow-axes-x360.map  wow-buttons-ps3.map  wow-buttons-x360.map
jlib/bio/: bio.hh
jlib/crypt/: Makefile.am  crypt.cc  crypt.hh  curve.cc  curve.hh  groth.cc  groth.hh  schnorr.cc  schnorr.hh
jlib/crypt/tests/: groth_test.cc
jlib/cuda/: Makefile.am  cuda.cc  cuda.hh  gemm.hh  neural.hh
jlib/gl/: Makefile.am  buffers.cc  buffers.hh  lights.cc  lights.hh
jlib/glu/: Makefile.am  projection.cc  projection.hh  textures.cc  textures.hh
jlib/glut/: Makefile.am  Plot.hh  main.cc  main.hh
jlib/glx/: Makefile.am  Plot.hh  Window.cc  Window.hh
jlib/math/: Makefile.am  Plot.hh  buffer.hh  math.hh  matrix.hh  polynomial.hh  tensor.hh
jlib/media/: AudioFile.cc  AudioFile.hh  Dsp.cc  Dsp.hh  Makefile.am  PlayList.cc  PlayList.hh  Player.cc  Player.hh  Type.hh  WavFile.cc  WavFile.hh  audiofilestream.hh  datastream.hh  notestream.hh  stream.hh  wavstream.hh
jlib/net/: ASImapBox.cc  ASImapBox.hh  ASMBox.cc  ASMBox.hh  ASMailBox.cc  ASMailBox.hh  Email.cc  Email.hh  Imap4.cc  Imap4.hh  Imap4Box.cc  Imap4Box.hh  Imap4Fetch.cc  Imap4Fetch.hh  Imap4Folder.cc  Imap4Folder.hh  MBox.cc  MBox.hh  MFolder.cc  MFolder.hh  MailBox.cc  MailBox.hh  MailFetch.hh  MailFolder.cc  MailFolder.hh  Makefile.am  Pop3.cc  Pop3.hh  net.cc  net.hh
jlib/sys/: ASServent.hh  Directory.cc  Directory.hh  Makefile.am  Servent.cc  Servent.hh  auto.hh  joystick.hh  object.hh  pipe.cc  pipe.hh  proxystream.hh  pstream.hh  serialstream.hh  socketstream.hh  sslproxystream.hh  sslstream.hh  sync.hh  sys.cc  sys.hh  tfstream.cc  tfstream.hh
jlib/util/: Date.cc  Date.hh  Headers.cc  Headers.hh  Makefile.am  MimeType.cc  MimeType.hh  Regex.cc  Regex.hh  Timer.cc  Timer.hh  URL.cc  URL.hh  json.cc  json.hh  util.cc  util.hh  xml.cc  xml.hh  xmlparser.cc  xmlparser.hh  xmltokenizer.cc  xmltokenizer.hh
jlib/x/: Display.cc  Display.hh  Makefile.am  Plot.hh  Window.cc  Window.hh
tests/: Makefile.am  crypt_curve_test.cc  crypt_groth_test.cc  crypt_schnorr_test.cc  math_test.cc  media_datastream_test.cc  media_notestream_test.cc  media_player_test.cc  media_wavfile_test.cc  net_email_multipart_test.cc  net_email_received_test.cc  net_email_test.cc  net_extract_address_mangled_test.cc  net_extract_address_simple_test.cc  net_extract_address_test.cc  sys_sync_test.cc  tensor_test.cc  util_headers_angie_test.cc  util_headers_fold_test.cc  util_headers_manual_test.cc  util_headers_test.cc  util_test.cc  util_xml_test.cc  x_window_test.cc
