INCLUDES = -I$(top_srcdir)

lib_LTLIBRARIES = libjmath.la
libjmath_la_SOURCES = math.hh
#libjmath_la_LDFLAGS = -version-info $(LIBJ_SO_VERSION) -release $(JLIB_RELEASE) -no-undefined
#libjmath_la_LIBADD = $(top_builddir)/jlib/sys/libjsys.la \
#	                 $(top_builddir)/jlib/crypt/libjcrypt.la
libjmathincludedir=$(includedir)/jlib-1.2/jlib/math
libjmathinclude_HEADERS = buffer.hh tensor.hh matrix.hh math.hh Plot.hh 

